[package]
name = "gpgpu-fluid"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
glow = "0.12.1"
glutin = "0.28"

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3", features=["HtmlCanvasElement", "WebGl2RenderingContext", "Window"] }
wasm-bindgen = { version = "0.2" }
